added files to meson build of f1 library, now swo example builds.

--- a/lib/stm32/f1/meson.build
+++ b/lib/stm32/f1/meson.build
@@ -2,17 +2,17 @@ stm32f1_src = files(
     'rcc.c',
     'adc.c',
     'crc.c',
-#    'dac.c',
-#    'dma.c',
-#    'flash.c',
-#    'gpio.c',
-#    'i2c.c',
-#    'iwdg.c',
-#    'pwr.c',
-#    'rtc.c',
-#    'spi.c',
-#    'timer.c',
-#    'usart.c',
-#    'vector_nvic.c',
+    'dac.c',
+    'dma.c',
+    'flash.c',
+    'gpio.c',
+    'i2c.c',
+    'iwdg.c',
+    'pwr.c',
+    'rtc.c',
+    'spi.c',
+    'timer.c',
+    'usart.c',
+# this aliases with existing vectors? why is it here?   'vector_nvic.c',
 )
  
